Fixed text align for table header

--- a/wp-content/themes/hpractic/frontend/src/sass/components/smart/_table.scss
+++ b/wp-content/themes/hpractic/frontend/src/sass/components/smart/_table.scss
@@ -58,6 +58,18 @@
       td, th {
         font-weight: 700;
         text-align: left;
+
+        &.has-text-align-left {
+          text-align: left;
+        }
+
+        &.has-text-align-center {
+          text-align: center;
+        }
+
+        &.has-text-align-right {
+          text-align: right;
+        }
       }
     }
 
@@ -80,18 +92,6 @@
         display: block;
         max-width: 100%;
         max-height: 100%;
-      }
-
-      .has-text-align-left {
-          text-align: left;
-      }
-
-      .has-text-align-center {
-        text-align: center;
-      }
-
-      .has-text-align-right {
-        text-align: right;
       }
     }
   }
